lang/examples/good/11-01-function-definition.wdr
fun main(): Void {
  printInt(test());

  return;
}

fun test(): Int {
  return 42;
}