lang/examples/bad/06-04-no-return.wdr
fun main(): Void {
  printString("test");
}